--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -5,45 +5,43 @@ Created by Andrey Shpigunov at 20.01.2025
 All right reserved.
 ----------------------------------------*/
 
-
 :root {
   --forms-width: 400px;
   --forms-height: 4rem;
   --forms-side-padding: 1rem;
-  
+
   --forms-font-size: var(--font-size);
   --forms-font-color: #000;
   --forms-font-color-readonly: #000;
   --forms-font-color-disabled: #666;
   --forms-font-color-placeholder: #ccc;
-  
-  --forms-border-width: .16rem;
-  --forms-border-radius: .8rem;
+
+  --forms-border-width: 0.16rem;
+  --forms-border-radius: 0.8rem;
   --forms-border-color: #ddd;
   --forms-border-color-focused: #8cf;
   --forms-border-color-error: #f00;
   --forms-border-color-readonly: #ddd;
   --forms-border-color-disabled: #ddd;
-  
+
   --forms-background-color: #fff;
   --forms-background-color-readonly: #fafafa;
   --forms-background-color-disabled: #f6f6f6;
 }
 
-
-input[type=color],
-input[type=date],
-input[type=datetime],
-input[type=tel],
-input[type=email],
-input[type=month],
-input[type=number],
-input[type=password],
-input[type=search],
-input[type=text],
-input[type=time],
-input[type=url],
-input[type=week],
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="tel"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
 input:not([type]),
 textarea,
 select {
@@ -61,7 +59,7 @@ select {
   border-radius: var(--forms-border-radius);
   background-color: var(--forms-background-color);
   appearance: none;
-  
+
   &[readonly],
   &[readonly]:focus {
     color: var(--forms-font-color-readonly);
@@ -77,7 +75,7 @@ select {
     cursor: not-allowed !important;
     box-shadow: none;
   }
-  
+
   &:focus {
     border-color: var(--forms-border-color-focused);
     box-shadow: 0 0 0 1px var(--forms-border-color-focused);
@@ -92,10 +90,21 @@ select {
 }
 
 select {
+  padding-right: calc(var(--forms-side-padding) * 2.6);
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg width='800px' height='800px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.70711 16.1359C5.31659 16.5264 5.31659 17.1596 5.70711 17.5501L10.5993 22.4375C11.3805 23.2179 12.6463 23.2176 13.4271 22.4369L18.3174 17.5465C18.708 17.156 18.708 16.5228 18.3174 16.1323C17.9269 15.7418 17.2937 15.7418 16.9032 16.1323L12.7176 20.3179C12.3271 20.7085 11.6939 20.7085 11.3034 20.3179L7.12132 16.1359C6.7308 15.7454 6.09763 15.7454 5.70711 16.1359Z' fill='%230F0F0F'/%3E%3Cpath d='M18.3174 7.88675C18.708 7.49623 18.708 6.86307 18.3174 6.47254L13.4252 1.58509C12.644 0.804698 11.3783 0.805008 10.5975 1.58579L5.70711 6.47615C5.31658 6.86667 5.31658 7.49984 5.70711 7.89036C6.09763 8.28089 6.7308 8.28089 7.12132 7.89036L11.307 3.70472C11.6975 3.31419 12.3307 3.31419 12.7212 3.70472L16.9032 7.88675C17.2937 8.27728 17.9269 8.27728 18.3174 7.88675Z' fill='%23000000'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right calc(var(--forms-side-padding) - 4px) top 52%, 0 0;
   background-size: 1.6rem;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: calc(var(--forms-side-padding) * 2.6);
+    width: 1px;
+    background-color: var(--forms-border-color);
+  }
 }
 
 ::placeholder {
@@ -109,8 +118,10 @@ input:-ms-input-placeholder {
   text-overflow: ellipsis;
 }
 
-input, textarea,
-select, button {
+input,
+textarea,
+select,
+button {
   max-width: var(--forms-width);
   font-family: inherit;
   font-size: var(--font-size);
