--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -5,9 +5,7 @@ Created by Andrey Shpigunov at 12.02.2025
 All right reserved.
 ----------------------------------------*/
 
-
 /* !- Modal windows */
-
 
 :root {
   --modal-margin: 3vw;
@@ -23,17 +21,14 @@ All right reserved.
   --modal-overlay-background-color: #00000066;
 }
 
-
 html.modal_active body {
   overflow: hidden;
 }
-
 
 /* !- Modal window content */
 .modal-content {
   display: none;
 }
-
 
 /* !- Modal wrapper */
 .modal {
@@ -52,17 +47,36 @@ html.modal_active body {
   pointer-events: all;
   display: block;
 }
-.modal_z1  { z-index: 10001 }
-.modal_z2  { z-index: 10002 }
-.modal_z3  { z-index: 10003 }
-.modal_z4  { z-index: 10004 }
-.modal_z5  { z-index: 10005 }
-.modal_z6  { z-index: 10006 }
-.modal_z7  { z-index: 10007 }
-.modal_z8  { z-index: 10008 }
-.modal_z9  { z-index: 10009 }
-.modal_z10 { z-index: 10010 }
-
+.modal_z1 {
+  z-index: 10001;
+}
+.modal_z2 {
+  z-index: 10002;
+}
+.modal_z3 {
+  z-index: 10003;
+}
+.modal_z4 {
+  z-index: 10004;
+}
+.modal_z5 {
+  z-index: 10005;
+}
+.modal_z6 {
+  z-index: 10006;
+}
+.modal_z7 {
+  z-index: 10007;
+}
+.modal_z8 {
+  z-index: 10008;
+}
+.modal_z9 {
+  z-index: 10009;
+}
+.modal_z10 {
+  z-index: 10010;
+}
 
 /* !- Overlay */
 .modal-overlay {
@@ -74,7 +88,6 @@ html.modal_active body {
   right: 0;
   background-color: var(--modal-overlay-background-color);
 }
-
 
 /* ! -Main structure */
 .modal-outer {
@@ -93,7 +106,6 @@ html.modal_active body {
   min-height: 100%;
 }
 
-
 /* !- Modal window */
 .modal-window {
   position: relative;
@@ -108,7 +120,6 @@ html.modal_active body {
   border-radius: var(--modal-border-radius);
 }
 
-
 /* !- Close cross */
 .modal-rail {
   position: absolute;
@@ -116,7 +127,7 @@ html.modal_active body {
   bottom: 6px;
   right: 6px;
   width: 0;
-  
+
   .modal-close {
     display: block;
     position: sticky;
@@ -129,16 +140,16 @@ html.modal_active body {
     font-weight: 200;
     border: none;
     border-radius: var(--modal-border-radius);
-    
+
     will-change: opacity;
     opacity: 0;
-    transition: opacity .15s ease-out;
-    
+    transition: opacity 0.15s ease-out;
+
     /* @media (--medium) {
       top: -50px;
       background: none;
     } */
-    
+
     &:before,
     &:after {
       content: "";
@@ -148,10 +159,10 @@ html.modal_active body {
       left: calc((var(--modal-closer-area) - var(--modal-closer-size)) / 2);
       width: var(--modal-closer-size);
       height: var(--modal-closer-width);
-      
+
       will-change: color;
       background: var(--modal-closer-color);
-      transition: background .15s ease-out;
+      transition: background 0.15s ease-out;
       transform-origin: center;
     }
     &:before {
@@ -163,10 +174,9 @@ html.modal_active body {
   }
 }
 .modal_active .modal-rail {
-  
   .modal-close {
     opacity: 1;
-    
+
     @media (any-hover: hover) {
       &:hover:before,
       &:hover:after,
@@ -178,31 +188,28 @@ html.modal_active body {
   }
 }
 
-
 /* !- Effects
    https://github.com/codrops/ModalWindowEffects */
-
 
 .modal {
   & .modal-overlay {
     will-change: opacity;
     opacity: 0;
-    transition: opacity .2s ease-out;
+    transition: opacity 0.2s ease-out;
   }
   &.modal_active .modal-overlay {
     opacity: 1;
   }
 }
 
-
 /* !- Default */
 .modal {
   & .modal-window {
     will-change: visibility, opacity, transform;
     opacity: 0;
-    transform: scale(.97);
+    transform: scale(0.97);
     transform-origin: center top;
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
   }
   &.modal_active .modal-window {
     transform: scale(1);
@@ -210,17 +217,15 @@ html.modal_active body {
   }
 }
 
-
 /* !- Zoom in */
 .modal_effect-in {
   & .modal-window {
-    transform: scale(.9);
+    transform: scale(0.9);
   }
   &.modal_active .modal-window {
     transform: scale(1);
   }
 }
-
 
 /* !- Zoom out */
 .modal_effect-out {
@@ -232,7 +237,6 @@ html.modal_active body {
   }
 }
 
-
 /* !- Slide up */
 .modal_effect-up {
   & .modal-window {
@@ -242,7 +246,6 @@ html.modal_active body {
     transform: translateY(0);
   }
 }
-
 
 /* !- Slide down */
 .modal_effect-down {
@@ -254,7 +257,6 @@ html.modal_active body {
   }
 }
 
-
 /* !- Slide from left */
 .modal_effect-left {
   & .modal-window {
@@ -264,7 +266,6 @@ html.modal_active body {
     transform: translateX(0);
   }
 }
-
 
 /* !- Slide from right */
 .modal_effect-right {
