--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -5,9 +5,7 @@ Created by Andrey Shpigunov at 12.02.2025
 All right reserved.
 ----------------------------------------*/
 
-
 /* !- Typo */
-
 
 /*
   .h[1-6]
@@ -21,20 +19,19 @@ All right reserved.
   .lh[0-9] (m,l,xl)  - values: 1.0-1.9
 */
 
-
 :root {
   --headers-margin-top: 1em;
-  --headers-margin-bottom: .5em;
+  --headers-margin-bottom: 0.5em;
   --headers-font-family: var(--font-family);
   --headers-font-weight: 700;
   --headers-font-color: var(--font-color);
 
   --h1-font-size: 2.5em;
-  --h2-font-size: 2.0em;
+  --h2-font-size: 2em;
   --h3-font-size: 1.5em;
   --h4-font-size: 1.25em;
   --h5-font-size: 1.125em;
-  --h6-font-size: 1.0em;
+  --h6-font-size: 1em;
 
   --h1-line-height: 1.2;
   --h2-line-height: 1.3;
@@ -43,70 +40,94 @@ All right reserved.
   --paragraph-margin: 1em;
 
   --figure-margin: 2.5em auto 2em;
-  --figcaption-margin-top: .5em;
+  --figcaption-margin-top: 0.5em;
   --figcaption-font-size: var(--font-size);
   --figcaption-color: #999;
-  
+
   --blockquote-margin: 2em 0;
   --blockquote-padding: 1em 2em;
-  --blockquote-border: solid .2em var(--font-color);
+  --blockquote-border: solid 0.2em var(--font-color);
 
-  --table-padding: .5em .75em;
+  --table-padding: 0.5em 0.75em;
   --table-border: 1px solid #ccc;
   --table-header-font-weight: 700;
 }
 
-
 /* !- Headers */
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
   margin-top: 0;
   margin-bottom: var(--headers-margin-bottom);
   font-family: var(--headers-font-family);
   font-weight: var(--headers-font-weight);
   color: var(--headers-font-color);
 }
-* + h2, * + .h2,
-* + h3, * + .h3,
-* + h4, * + .h4,
-* + h5, * + .h5,
-* + h6, * + .h6 {
+* + h2,
+* + .h2,
+* + h3,
+* + .h3,
+* + h4,
+* + .h4,
+* + h5,
+* + .h5,
+* + h6,
+* + .h6 {
   margin-top: var(--headers-margin-top);
 }
 
-h1, .h1 {
+h1,
+.h1 {
   margin-bottom: var(--headers-margin-bottom);
   line-height: var(--h1-line-height);
   font-size: var(--h1-font-size);
 }
-h2, .h2 {
+h2,
+.h2 {
   line-height: var(--h2-line-height);
   font-size: var(--h2-font-size);
 }
-h3, .h3 {
+h3,
+.h3 {
   line-height: var(--h3-line-height);
   font-size: var(--h3-font-size);
 }
-h4, .h4 { font-size: var(--h4-font-size) }
-h5, .h5 { font-size: var(--h5-font-size) }
-h6, .h6 { font-size: var(--h6-font-size) }
-
+h4,
+.h4 {
+  font-size: var(--h4-font-size);
+}
+h5,
+.h5 {
+  font-size: var(--h5-font-size);
+}
+h6,
+.h6 {
+  font-size: var(--h6-font-size);
+}
 
 /* !- Paragraph */
 
 p {
   margin: var(--paragraph-margin) 0;
   font-style: inherit;
-  
-  &:first-child { margin-top: 0 }
-  &:last-child  { margin-bottom: 0 }
-}
 
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
 
 /* !- Figure  */
 
@@ -130,7 +151,6 @@ blockquote {
   border-left: var(--blockquote-border);
 }
 
-
 /* !- Preformatted */
 
 pre {
@@ -138,25 +158,32 @@ pre {
   font-family: inherit;
 }
 
-
 /* !- Lists */
 
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin: var(--paragraph-margin) 0;
   padding-left: calc(var(--paragraph-margin) * 1.5);
-  
-  & ul, & ol, & dl, & li {
+
+  & ul,
+  & ol,
+  & dl,
+  & li {
     margin: var(--space-1) 0;
   }
 }
 dl {
   padding-left: 0;
-  
-  & dt,
-  & dd { margin: var(--space-1) 0 }
-  & dt { font-weight: bold }
-}
 
+  & dt,
+  & dd {
+    margin: var(--space-1) 0;
+  }
+  & dt {
+    font-weight: bold;
+  }
+}
 
 /* !- Table */
 
@@ -181,137 +208,274 @@ table {
   }
 }
 
-
 /* !- Font styles */
 
-.mono { font-family: monospace }
-.italic { font-style: italic }
-.strike { text-decoration: line-through }
+.mono {
+  font-family: monospace;
+}
+.italic {
+  font-style: italic;
+}
+.strike {
+  text-decoration: line-through;
+}
 
 @for $i from 10 to 19 {
-  .fs$(i) { font-size: calc($(i)rem / 10) !important }
+  .fs$(i) {
+    font-size: calc($(i) rem / 10) !important;
+  }
 }
 @for $i from 20 to 80 by 2 {
-  .fs$(i) { font-size: calc($(i)rem / 10) !important }
+  .fs$(i) {
+    font-size: calc($(i) rem / 10) !important;
+  }
 }
 
-.fw100 { font-weight: 100 !important }
-.fw200 { font-weight: 200 !important }
-.fw300 { font-weight: 300 !important }
-.fw400 { font-weight: 400 !important }
-.fw500 { font-weight: 500 !important }
-.fw600 { font-weight: 600 !important }
-.fw700 { font-weight: 700 !important }
-.fw800 { font-weight: 800 !important }
-.fw900 { font-weight: 900 !important }
+.fw100 {
+  font-weight: 100 !important;
+}
+.fw200 {
+  font-weight: 200 !important;
+}
+.fw300 {
+  font-weight: 300 !important;
+}
+.fw400 {
+  font-weight: 400 !important;
+}
+.fw500 {
+  font-weight: 500 !important;
+}
+.fw600 {
+  font-weight: 600 !important;
+}
+.fw700 {
+  font-weight: 700 !important;
+}
+.fw800 {
+  font-weight: 800 !important;
+}
+.fw900 {
+  font-weight: 900 !important;
+}
 
 @media (--medium) {
-  
   @for $i from 10 to 19 {
-    .m\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .m\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
   @for $i from 20 to 80 by 2 {
-    .m\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .m\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
-  
-  .m\:fw100 { font-weight: 100 !important }
-  .m\:fw200 { font-weight: 200 !important }
-  .m\:fw300 { font-weight: 300 !important }
-  .m\:fw400 { font-weight: 400 !important }
-  .m\:fw500 { font-weight: 500 !important }
-  .m\:fw600 { font-weight: 600 !important }
-  .m\:fw700 { font-weight: 700 !important }
-  .m\:fw800 { font-weight: 800 !important }
-  .m\:fw900 { font-weight: 900 !important }
+
+  .m\:fw100 {
+    font-weight: 100 !important;
+  }
+  .m\:fw200 {
+    font-weight: 200 !important;
+  }
+  .m\:fw300 {
+    font-weight: 300 !important;
+  }
+  .m\:fw400 {
+    font-weight: 400 !important;
+  }
+  .m\:fw500 {
+    font-weight: 500 !important;
+  }
+  .m\:fw600 {
+    font-weight: 600 !important;
+  }
+  .m\:fw700 {
+    font-weight: 700 !important;
+  }
+  .m\:fw800 {
+    font-weight: 800 !important;
+  }
+  .m\:fw900 {
+    font-weight: 900 !important;
+  }
 }
 
 @media (--large) {
-  
   @for $i from 10 to 19 {
-    .l\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .l\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
   @for $i from 20 to 80 by 2 {
-    .l\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .l\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
-  
-  .l\:fw100 { font-weight: 100 !important }
-  .l\:fw200 { font-weight: 200 !important }
-  .l\:fw300 { font-weight: 300 !important }
-  .l\:fw400 { font-weight: 400 !important }
-  .l\:fw500 { font-weight: 500 !important }
-  .l\:fw600 { font-weight: 600 !important }
-  .l\:fw700 { font-weight: 700 !important }
-  .l\:fw800 { font-weight: 800 !important }
-  .l\:fw900 { font-weight: 900 !important }
+
+  .l\:fw100 {
+    font-weight: 100 !important;
+  }
+  .l\:fw200 {
+    font-weight: 200 !important;
+  }
+  .l\:fw300 {
+    font-weight: 300 !important;
+  }
+  .l\:fw400 {
+    font-weight: 400 !important;
+  }
+  .l\:fw500 {
+    font-weight: 500 !important;
+  }
+  .l\:fw600 {
+    font-weight: 600 !important;
+  }
+  .l\:fw700 {
+    font-weight: 700 !important;
+  }
+  .l\:fw800 {
+    font-weight: 800 !important;
+  }
+  .l\:fw900 {
+    font-weight: 900 !important;
+  }
 }
 
 @media (--xlarge) {
-  
   @for $i from 10 to 19 {
-    .xl\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .xl\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
   @for $i from 20 to 80 by 2 {
-    .xl\:fs$(i) { font-size: calc($(i)rem / 10) !important }
+    .xl\:fs$(i) {
+      font-size: calc($(i) rem / 10) !important;
+    }
   }
-  
-  .xl\:fw100 { font-weight: 100 !important }
-  .xl\:fw200 { font-weight: 200 !important }
-  .xl\:fw300 { font-weight: 300 !important }
-  .xl\:fw400 { font-weight: 400 !important }
-  .xl\:fw500 { font-weight: 500 !important }
-  .xl\:fw600 { font-weight: 600 !important }
-  .xl\:fw700 { font-weight: 700 !important }
-  .xl\:fw800 { font-weight: 800 !important }
-  .xl\:fw900 { font-weight: 900 !important }
+
+  .xl\:fw100 {
+    font-weight: 100 !important;
+  }
+  .xl\:fw200 {
+    font-weight: 200 !important;
+  }
+  .xl\:fw300 {
+    font-weight: 300 !important;
+  }
+  .xl\:fw400 {
+    font-weight: 400 !important;
+  }
+  .xl\:fw500 {
+    font-weight: 500 !important;
+  }
+  .xl\:fw600 {
+    font-weight: 600 !important;
+  }
+  .xl\:fw700 {
+    font-weight: 700 !important;
+  }
+  .xl\:fw800 {
+    font-weight: 800 !important;
+  }
+  .xl\:fw900 {
+    font-weight: 900 !important;
+  }
 }
 
 /* Letter spacing */
-.ls0  { letter-spacing: 0 !important }
-.ls1  { letter-spacing: .0625em !important }
-.ls2  { letter-spacing: .125em !important }
-.ls3  { letter-spacing: .25em !important }
-.ls4  { letter-spacing: .5em !important }
+.ls0 {
+  letter-spacing: 0 !important;
+}
+.ls1 {
+  letter-spacing: 0.0625em !important;
+}
+.ls2 {
+  letter-spacing: 0.125em !important;
+}
+.ls3 {
+  letter-spacing: 0.25em !important;
+}
+.ls4 {
+  letter-spacing: 0.5em !important;
+}
 
 @media (--medium) {
-  .m\:ls0  { letter-spacing: 0 !important }
-  .m\:ls1  { letter-spacing: .0625em !important }
-  .m\:ls2  { letter-spacing: .125em !important }
-  .m\:ls3  { letter-spacing: .25em !important }
-  .m\:ls4  { letter-spacing: .5em !important }
+  .m\:ls0 {
+    letter-spacing: 0 !important;
+  }
+  .m\:ls1 {
+    letter-spacing: 0.0625em !important;
+  }
+  .m\:ls2 {
+    letter-spacing: 0.125em !important;
+  }
+  .m\:ls3 {
+    letter-spacing: 0.25em !important;
+  }
+  .m\:ls4 {
+    letter-spacing: 0.5em !important;
+  }
 }
 @media (--large) {
-  .l\:ls0  { letter-spacing: 0 !important }
-  .l\:ls1  { letter-spacing: .0625em !important }
-  .l\:ls2  { letter-spacing: .125em !important }
-  .l\:ls3  { letter-spacing: .25em !important }
-  .l\:ls4  { letter-spacing: .5em !important }
+  .l\:ls0 {
+    letter-spacing: 0 !important;
+  }
+  .l\:ls1 {
+    letter-spacing: 0.0625em !important;
+  }
+  .l\:ls2 {
+    letter-spacing: 0.125em !important;
+  }
+  .l\:ls3 {
+    letter-spacing: 0.25em !important;
+  }
+  .l\:ls4 {
+    letter-spacing: 0.5em !important;
+  }
 }
 @media (--xlarge) {
-  .xl\:ls0  { letter-spacing: 0 !important }
-  .xl\:ls1  { letter-spacing: .0625em !important }
-  .xl\:ls2  { letter-spacing: .125em !important }
-  .xl\:ls3  { letter-spacing: .25em !important }
-  .xl\:ls4  { letter-spacing: .5em !important }
+  .xl\:ls0 {
+    letter-spacing: 0 !important;
+  }
+  .xl\:ls1 {
+    letter-spacing: 0.0625em !important;
+  }
+  .xl\:ls2 {
+    letter-spacing: 0.125em !important;
+  }
+  .xl\:ls3 {
+    letter-spacing: 0.25em !important;
+  }
+  .xl\:ls4 {
+    letter-spacing: 0.5em !important;
+  }
 }
-
 
 /* Line height */
 @for $i from 0 to 9 {
-  .lh$(i)  { line-height: 1.$(i) !important }
+  .lh$(i) {
+    line-height: 1$ (i) !important;
+  }
 }
 
 @media (--medium) {
   @for $i from 0 to 9 {
-    .m\:lh$(i)  { line-height: 1.$(i) !important }
+    .m\:lh$(i) {
+      line-height: 1$ (i) !important;
+    }
   }
 }
 @media (--large) {
   @for $i from 0 to 9 {
-    .l\:lh$(i)  { line-height: 1.$(i) !important }
+    .l\:lh$(i) {
+      line-height: 1$ (i) !important;
+    }
   }
 }
 @media (--xlarge) {
   @for $i from 0 to 9 {
-    .xl\:lh$(i)  { line-height: 1.$(i) !important }
+    .xl\:lh$(i) {
+      line-height: 1$ (i) !important;
+    }
   }
 }
