--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -5,7 +5,9 @@ Created by Andrey Shpigunov at 12.02.2025
 All right reserved.
 ----------------------------------------*/
 
+
 /* !- Modal windows */
+
 
 :root {
   --modal-margin: 3vw;
@@ -21,14 +23,17 @@ All right reserved.
   --modal-overlay-background-color: #00000066;
 }
 
+
 html.modal_active body {
   overflow: hidden;
 }
+
 
 /* !- Modal window content */
 .modal-content {
   display: none;
 }
+
 
 /* !- Modal wrapper */
 .modal {
@@ -47,36 +52,17 @@ html.modal_active body {
   pointer-events: all;
   display: block;
 }
-.modal_z1 {
-  z-index: 10001;
-}
-.modal_z2 {
-  z-index: 10002;
-}
-.modal_z3 {
-  z-index: 10003;
-}
-.modal_z4 {
-  z-index: 10004;
-}
-.modal_z5 {
-  z-index: 10005;
-}
-.modal_z6 {
-  z-index: 10006;
-}
-.modal_z7 {
-  z-index: 10007;
-}
-.modal_z8 {
-  z-index: 10008;
-}
-.modal_z9 {
-  z-index: 10009;
-}
-.modal_z10 {
-  z-index: 10010;
-}
+.modal_z1  { z-index: 10001 }
+.modal_z2  { z-index: 10002 }
+.modal_z3  { z-index: 10003 }
+.modal_z4  { z-index: 10004 }
+.modal_z5  { z-index: 10005 }
+.modal_z6  { z-index: 10006 }
+.modal_z7  { z-index: 10007 }
+.modal_z8  { z-index: 10008 }
+.modal_z9  { z-index: 10009 }
+.modal_z10 { z-index: 10010 }
+
 
 /* !- Overlay */
 .modal-overlay {
@@ -88,6 +74,7 @@ html.modal_active body {
   right: 0;
   background-color: var(--modal-overlay-background-color);
 }
+
 
 /* ! -Main structure */
 .modal-outer {
@@ -106,6 +93,7 @@ html.modal_active body {
   min-height: 100%;
 }
 
+
 /* !- Modal window */
 .modal-window {
   position: relative;
@@ -120,6 +108,7 @@ html.modal_active body {
   border-radius: var(--modal-border-radius);
 }
 
+
 /* !- Close cross */
 .modal-rail {
   position: absolute;
@@ -127,7 +116,7 @@ html.modal_active body {
   bottom: 6px;
   right: 6px;
   width: 0;
-
+  
   .modal-close {
     display: block;
     position: sticky;
@@ -140,16 +129,16 @@ html.modal_active body {
     font-weight: 200;
     border: none;
     border-radius: var(--modal-border-radius);
-
+    
     will-change: opacity;
     opacity: 0;
-    transition: opacity 0.15s ease-out;
-
+    transition: opacity .15s ease-out;
+    
     /* @media (--medium) {
       top: -50px;
       background: none;
     } */
-
+    
     &:before,
     &:after {
       content: "";
@@ -159,10 +148,10 @@ html.modal_active body {
       left: calc((var(--modal-closer-area) - var(--modal-closer-size)) / 2);
       width: var(--modal-closer-size);
       height: var(--modal-closer-width);
-
+      
       will-change: color;
       background: var(--modal-closer-color);
-      transition: background 0.15s ease-out;
+      transition: background .15s ease-out;
       transform-origin: center;
     }
     &:before {
@@ -174,9 +163,10 @@ html.modal_active body {
   }
 }
 .modal_active .modal-rail {
+  
   .modal-close {
     opacity: 1;
-
+    
     @media (any-hover: hover) {
       &:hover:before,
       &:hover:after,
@@ -188,28 +178,31 @@ html.modal_active body {
   }
 }
 
+
 /* !- Effects
    https://github.com/codrops/ModalWindowEffects */
+
 
 .modal {
   & .modal-overlay {
     will-change: opacity;
     opacity: 0;
-    transition: opacity 0.2s ease-out;
+    transition: opacity .2s ease-out;
   }
   &.modal_active .modal-overlay {
     opacity: 1;
   }
 }
 
+
 /* !- Default */
 .modal {
   & .modal-window {
     will-change: visibility, opacity, transform;
     opacity: 0;
-    transform: scale(0.97);
+    transform: scale(.97);
     transform-origin: center top;
-    transition: all 0.2s ease-out;
+    transition: all .2s ease-out;
   }
   &.modal_active .modal-window {
     transform: scale(1);
@@ -217,15 +210,17 @@ html.modal_active body {
   }
 }
 
+
 /* !- Zoom in */
 .modal_effect-in {
   & .modal-window {
-    transform: scale(0.9);
+    transform: scale(.9);
   }
   &.modal_active .modal-window {
     transform: scale(1);
   }
 }
+
 
 /* !- Zoom out */
 .modal_effect-out {
@@ -237,6 +232,7 @@ html.modal_active body {
   }
 }
 
+
 /* !- Slide up */
 .modal_effect-up {
   & .modal-window {
@@ -246,6 +242,7 @@ html.modal_active body {
     transform: translateY(0);
   }
 }
+
 
 /* !- Slide down */
 .modal_effect-down {
@@ -257,6 +254,7 @@ html.modal_active body {
   }
 }
 
+
 /* !- Slide from left */
 .modal_effect-left {
   & .modal-window {
@@ -266,6 +264,7 @@ html.modal_active body {
     transform: translateX(0);
   }
 }
+
 
 /* !- Slide from right */
 .modal_effect-right {
